--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,23 @@
     background-origin: padding-box;
 }
 
-
-
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+ 
+    
 /* #endregion ASSETS */
 
 /* #region DEBUG */
 
-p{
+.jumbo p{
     font-size: 5rem;
-    color: white;
+    color: #ffffff;
+    opacity: 0;
 }
+
+
+
 /* #endregion DEBUG */
 
 /* #region HEADER */
@@ -30,26 +37,443 @@ p{
     right: 0;
 }
 
+.upgrade button{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 1rem;
+    border: 1px solid white;
+    padding: 0.5rem 2rem;
+
+
+}
+
+
 /* #endregion HEADER */
 
+/* #region MAIN MENU*/
 .main_menu{
     height:calc(100vh - 85px);
     width:215px ;
     background-color: black;
     position: fixed;
+    color: white;
+    font-size: 1rem;
+    overflow: hidden;
 }
 
+/* #region NAVIGAZIONE */
+.home img{
+    height: 1.3rem;
+    padding-right: 0.3rem;
+    
+    
+}
+
+.home{
+    display: flex;
+    align-items: flex-end;
+    padding-left: 1.3rem;
+    margin-top: 1rem;
+    border-left: 2px solid #ADFF2F ;
+}
+
+.cerca img{
+    height: 1.3rem;
+    padding-right: 0.3rem;
+    
+    
+}
+
+.cerca{
+    display: flex;
+    align-items: flex-end;
+    padding-left: 1.3rem;
+    padding-top: 0.5rem;
+    color: #a3a3a3;
+    
+}
+
+.libreria img{
+    height: 1.3rem;
+    padding-right: 0.3rem;
+    
+    
+}
+
+.libreria{
+    display: flex;
+    align-items: flex-end;
+    padding-left: 1.3rem;
+    padding-top: 0.5rem;
+    color: #a3a3a3;
+}
+
+.logo{
+    height: 2.3rem;
+    padding-top: 1.3rem;
+    padding-left: 1.3rem;
+}
+
+/* #endregion NAVIGAZIONE */
+
+/* #region PLAYLIST */
+#playlist{
+    margin-top: 1.2rem;
+    padding-left: 1.3rem;
+}
+
+
+  .crea{
+      color: #a3a3a3;
+    padding-left: 0.6rem;
+}
+
+.aggiungi{
+    background-color: #a3a3a3;
+    font-size: 2rem;
+    color: black;
+    padding: 0 0.5rem;
+}
+
+.crea_playlist{
+    display: flex;
+    align-items: center;
+}
+/* #endregion PLAYLIST */
+
+/* #region NOME PLAYLIST */
+.nome_playlist {
+    margin-top: 1rem;
+    line-height: 1.5rem;
+    color: #a3a3a3;
+}
+
+/* #endregion NOME PLAYLIST */
+
+/* #region INSTALLA APP */
+#installa{
+    width: 80%;  
+    margin-top: 25%;
+    padding-left: 1.3rem;
+    padding-bottom: 0.4rem;
+    
+ }
+ 
+ #installa hr{
+     border:1px solid #a3a3a3;
+     margin: 0.8rem 0;
+    }
+
+    #installa p{
+    color: #a3a3a3;
+    font-size: 0.6rem;
+
+    
+}
+
+#installa .name{
+    color: white;
+}
+
+ .arrow, .fa-user{
+     border-radius: 50%;
+     padding: 0.2rem;
+     border: 1px solid #a3a3a3;
+     margin-right: 0.8rem;
+ }
+ 
+ .fa-user{
+    background-color: #a3a3a3;
+}
+
+/* #endregion INSTALLA APP*/
+
+
+/* #endregion MAIN MENU*/
+
+/* #region MAIN JUMBO */
 .jumbo{
     margin-left: 215px ;
    background-color: rgba(20, 25, 34, 1);
+  padding-top: 85px;
 }
 
+.jumbo h2{
+    
+    color: white;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+}
+/* #region SEZIONI */
+.sezioni{
+    color: #a3a3a3;
+    padding:1rem 0 ;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.container{
+    width: 60%;
+    margin: auto;
+}
+
+.evidenziato{
+    border-bottom: 2px solid #ADFF2F;
+    padding-bottom: 2px;
+
+}
+/* #endregion SEZIONI */
+
+/* #region ALBUM */
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-bottom: 2rem;
+    
+}
+
+.album {
+    width: calc(100% / 6 - 1rem);
+    aspect-ratio: 1 / 1;
+    text-align: center;
+}
+
+.debug .album {
+    background-color: red;
+}
+
+.container_album {
+    max-width: 1440px;
+    padding-left: 1.5rem;
+    padding-bottom: 85px;
+}
+
+.music {
+    overflow-y: auto;
+    height: calc(100% - 60px);
+}
+
+.album img{
+    max-width: 100%;
+}
+
+.album h4{
+    color: white;
+    padding: 0.5rem 0; 
+    font-size: 0.8rem;
+}
+
+.album h6{
+    color:#767a81 ;
+}
+
+
+.consiglio{
+    color: #767a81;
+    margin-bottom: 1rem;
+}
+
+.played{
+    padding-bottom: 1.5rem;
+}
+
+.circle_photo{
+    border-radius: 50%;
+}
+
+/* #endregion ALBUM */
+
+/* #endregion MAIN JUMBO */
+
+/* #region FOOTER */
 .player{
     width: 100vw;
     background-color: #282828;
     height:85px ;
     position: fixed;
     bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1rem;
+}
+
+/* #region BRANO */
+.brano img{
+    height: 3rem;
+    padding-right: 1rem;
+    
+}
+
+.brano {
+    color: white;
+    display: flex;
+    align-items: center;
+    width: 30%;
+}
+
+.canzone{
+    display: inline-block;
+    padding-right: 2rem ;
+}
+
+.canzone h6{
+    color: #a3a3a3;
+}
+
+.brano i{
+    color: #a3a3a3;
+    padding-right: 0.5rem;
+}
+/* #endregion BRANO */
+
+/* #region RIPRODUZIONE */
+
+ 
+    .riproduzione{
+      width:35% ;
+    margin: 1rem 0;
+    position: relative;
+    
+    
+    }
+
+    .tasti{
+        width: 100%;
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+
+    .riproduzione i{
+        color: white;
+        padding-left: 1rem;
+    }
+
+    .secondi_totali{
+        background-color:#5A5A5A ;
+        height: 3px;
+        width: 100%;
+    }
+
+    .riproduzione::before{
+        content: "0:25";
+        color: white;
+        position: absolute;
+        bottom: 0.6em;
+        left: -10%; 
+        font-size: 0.8rem;    
+    }
+
+    .riproduzione::after{
+        content: "4:35";
+        color: white;
+        position: absolute;
+        bottom: 0.6em;
+        right: -10%; 
+        font-size: 0.8rem;    
+    }
+
+    .circle{
+        position: absolute;
+        background-color: #a3a3a3;
+        border-radius: 50%;
+        height: 15px;
+        width: 15px;
+        bottom: 0.6rem;
+        left: 20%;
+        opacity: 0;
+
+    }
+    
+    .secondi{
+       background-color:#a3a3a3 ;
+       width: 20%;
+       height: 100%;
+       opacity: 0;
+    }
+
+
+
+    .riproduzione:hover .secondi{
+        opacity: 1;
+        background-color: #1db954;
+    }
+
+    .riproduzione:hover .circle{
+        opacity: 1;
+        background-color: white;
+    }
+
+ 
+
+/* #endregion RIPRODUZIONE */
+
+/* #region VOLUME */
+.volume{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 30%;
+    padding-right: 2rem;
+    position: relative;
+}
+
+.volume i{
+    color: white;
+    padding-left: 1rem;
+    font-size: 0.8rem;
+}
+
+.volume_totale{
+    background-color: #5A5A5A;
+    height: 3px;
+    width: 30%;
+    margin-left: 1rem;
+}
+
+.volume_attuale{
+    background-color: #a3a3a3;
+    height: 100%;
+    width: 30%;
+    opacity: 0;
+    position: relative;
+}
+
+.volume:hover .volume_attuale{
+    opacity: 1;
+    background-color:  #1db954;
+   }
+   
+.volume:hover .circle_volume{
+    opacity: 1;
+    background-color: white;
+   }
+
+.circle_volume{
+    position: absolute;
+    background-color: #a3a3a3;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    bottom: -0.2rem;
+    right: -0.2rem;
+    opacity: 0;
 }
 
 
+
+
+/* #endregion VOLUME */
+
+
+/* #endregion FOOTER */
+
+/* #region RESPONSIVE */
+
+
+
+/* #endregion RESPONSIVE */
