--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,14 @@ body{
     color: white;
     font-size: 1rem;
     overflow: hidden;
+    
+}
+
+.normal_display{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .xs_display{
